--- a/wordsArt.html
+++ b/wordsArt.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Quiz 1</title>
+        <title>Homework 1 Amir Thompson</title>
     </head>
     <body>
         <label for="bkgcolor">Background color</label>
